--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==5.0.2"
+django = ">=5.0.3"
 djangorestframework = "==3.14.0"
 django-cors-headers = "==4.3.1"
 pyjwt = "==2.8.0"
@@ -25,7 +25,7 @@ pandas = "==2.2.1"
 openpyxl = "==3.1.2"
 
 [dev-packages]
-black = "*"
+black = ">=24.3.0"
 
 [requires]
 python_version = "3.10"
